--- a/P1_Color-Palette-Manager/public/styles/main.css
+++ b/P1_Color-Palette-Manager/public/styles/main.css
@@ -1,12 +1,20 @@
 body {
-  background-color: #0f1115;
-  color: #e9eef6;
+    background-color: #0f1115;
+    color: #e9eef6;
 }
 
 a {
-  color: #3a86ff;
-  text-decoration: none;
+    color: #3a86ff;
+    text-decoration: none;
 }
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
+}
+
+.card .d-flex > div {
+    cursor: pointer;
+    transition: transform 0.1s ease-in-out;
+}
+.card .d-flex > div:hover {
+    transform: scale(1.1);
 }
