2025-10-20: add view button to app && add styles for read only colors

--- a/P1_Color-Palette-Manager/public/styles/main.css
+++ b/P1_Color-Palette-Manager/public/styles/main.css
@@ -18,3 +18,8 @@ a:hover {
 .card .d-flex > div:hover {
     transform: scale(1.1);
 }
+
+#roColors div:hover {
+    transform: scale(1.05);
+    transition: 0.15s ease-in-out;
+}
